--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "file-saver": "^2.0.5",
     "firebase": "^11.0.2",
     "git": "^0.1.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
+    "pdf-lib": "^1.17.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
